# rust-chip-8

./: Cargo.toml  Justfile  LICENSE  README.md
src/: chip8.rs  lib.rs  main.rs  sdl_speaker.rs
src/chip8/: audio.rs  cpu.rs  display.rs  emulator.rs  instruction.rs  keyboard.rs  memory.rs  mod.rs  registers.rs  stack.rs
src/speaker/: sdl_speaker.rs
src/wasm/: mod.rs  speaker.rs
