[package]
name = "chip-8"
version = "0.1.0"
authors = ["Michael Kohl <me@citizen428.net>"]
edition = "2024"

[lib]
# cdylib: for WASM builds (.wasm file), rlib: for SDL binary to link against
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.0"
sdl2 = { version = "0.37.0", optional = true }
debug_print = "1.0.0"
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "OscillatorNode",
    "OscillatorType",
    "Window",
    "Document",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
] }
js-sys = { version = "0.3", optional = true }

[features]
default = ["sdl"]
sdl = ["dep:sdl2"]
wasm = ["wasm-bindgen", "web-sys", "js-sys"]
